--- a/somador_4bit.qsf
+++ b/somador_4bit.qsf
@@ -80,4 +80,11 @@ set_location_assignment PIN_V14 -to OB4
 set_location_assignment PIN_AB22 -to OB5
 set_location_assignment PIN_AB21 -to OB6
 set_location_assignment PIN_U20 -to OA0
+set_location_assignment PIN_AB20 -to C1
+set_location_assignment PIN_AA19 -to C2
+set_location_assignment PIN_AA18 -to C3
+set_location_assignment PIN_AB18 -to C4
+set_location_assignment PIN_AA17 -to C5
+set_location_assignment PIN_U22 -to C6
+set_location_assignment PIN_AA20 -to C0
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
